--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
         debug {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
-            storeFile file('/Volumes/Data/Android/MediacalConferences/app/debug.keystore')
+            storeFile file('/Users/exoplatform/project/MedicalConferences/app/debug.keystore')
             storePassword 'android'
         }
     }
@@ -38,7 +38,8 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:+'
     compile 'com.android.support:recyclerview-v7:+'
+    compile 'com.android.support:design:+'
     compile 'com.google.android.gms:play-services-identity:+'
     compile 'com.google.android.gms:play-services:+'
-
+    compile 'com.squareup.picasso:picasso:+'
 }
